--- a/index.html
+++ b/index.html
@@ -1,20 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
+    <!-- daisy ui and tailwind cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- google fonts manrope  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <!-- fotn awesome -->
+    <script src="https://kit.fontawesome.com/5d87bf479e.js" crossorigin="anonymous"></script>
+
+    <!-- tailwind custom color -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        .font-manrope {
+            font-family: "Manrope", sans-serif;
+        }
+    </style>
 </head>
-<body>
-    <header>
+
+<body class="font-manrope">
+    <header class="container mx-auto">
+        <div class="hero">
+            <div class="hero-content flex-col lg:flex-row">
+
+                <div>
+                    <h1 class="text-7xl font-extrabold">It's good <br>
+                        tea time at The <br> Tea House</h1>
+                    <p class="py-6">
+                        Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
+                    </p>
+                    <button class="btn btn-primary">Explore More</button>
+                </div>
+                <div>
+                    <img src="images/banner.png" class="max-w-sm rounded-lg" />
+                    <!-- ratings badge -->
+                    <div class="flex -mt-16 gap-4 drop-shadow-lg bg-white p-5 w-60">
+                        <i class="fa-solid fa-star text-3xl text-amber-400"></i>
+                    <div>
+                        <p class="text-3xl font-bold">5.00</p>
+                    <p>Trust Pilot Ratings</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </header>
-    <main>
+    <main class="container mx-auto">
+        <!-- our featured products -->
+         <section class="text-center my-24">
+            <h2 class="text-5xl mb-5">Our Featured Products</h2>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 m-6">
+             <!-- 1st product -->
+             <div class="card bg-gray-100 p-8 shadow-xl">
+                <figure class="px-10 pt-12">
+                  <img
+                    src="images/tea-1.png"
+                    alt="Shoes"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="text-2xl font-bold">Milk Tea</h2>
+                  <p class="">Creamer could be replaced by fresh milk</p>
+                  <div class="card-actions">
+                  </div>
+                </div>
+              </div>
+             <!-- 1st product -->
+             <div class="card bg-gray-100 p-8 shadow-xl">
+                <figure class="px-10 pt-12">
+                  <img
+                    src="images/tea-1.png"
+                    alt="Shoes"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="text-2xl font-bold">Milk Tea</h2>
+                  <p class="">Creamer could be replaced by fresh milk</p>
+                  <div class="card-actions">
+                  </div>
+                </div>
+              </div>
+             <!-- 1st product -->
+             <div class="card bg-gray-100 p-8 shadow-xl">
+                <figure class="px-10 pt-12">
+                  <img
+                    src="images/tea-1.png"
+                    alt="Shoes"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="text-2xl font-bold">Milk Tea</h2>
+                  <p class="">Creamer could be replaced by fresh milk</p>
+                  <div class="card-actions">
+                  </div>
+                </div>
+              </div>
+             <!-- 1st product -->
+             <div class="card bg-gray-100 p-8 shadow-xl">
+                <figure class="px-10 pt-12">
+                  <img
+                    src="images/tea-1.png"
+                    alt="Shoes"
+                    class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="text-2xl font-bold">Milk Tea</h2>
+                  <p class="">Creamer could be replaced by fresh milk</p>
+                  <div class="card-actions">
+                  </div>
+                </div>
+              </div>
+           </div>
+
+         </section>
 
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
