--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
-                    }
+                    },
+                    
                 }
             }
         }
@@ -52,10 +53,10 @@
                     <!-- ratings badge -->
                     <div class="flex -mt-16 gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
-                    <div>
-                        <p class="text-3xl font-bold">5.00</p>
-                    <p>Trust Pilot Ratings</p>
-                    </div>
+                        <div>
+                            <p class="text-3xl font-bold">5.00</p>
+                            <p>Trust Pilot Ratings</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -64,73 +65,85 @@
     </header>
     <main class="container mx-auto">
         <!-- our featured products -->
-         <section class="text-center my-24">
+        <section class="text-center my-24">
             <h2 class="text-5xl mb-5">Our Featured Products</h2>
-            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 m-6">
-             <!-- 1st product -->
-             <div class="card bg-gray-100 p-8 shadow-xl">
-                <figure class="px-10 pt-12">
-                  <img
-                    src="images/tea-1.png"
-                    alt="Shoes"
-                    class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                  <h2 class="text-2xl font-bold">Milk Tea</h2>
-                  <p class="">Creamer could be replaced by fresh milk</p>
-                  <div class="card-actions">
-                  </div>
+            <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                look even slightly believable.</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 m-6">
+                <!-- 1st product -->
+                <div class="card bg-gray-100 p-8 shadow-xl">
+                    <figure class="px-10 pt-12">
+                        <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="">Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                        </div>
+                    </div>
                 </div>
-              </div>
-             <!-- 1st product -->
-             <div class="card bg-gray-100 p-8 shadow-xl">
-                <figure class="px-10 pt-12">
-                  <img
-                    src="images/tea-1.png"
-                    alt="Shoes"
-                    class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                  <h2 class="text-2xl font-bold">Milk Tea</h2>
-                  <p class="">Creamer could be replaced by fresh milk</p>
-                  <div class="card-actions">
-                  </div>
+                <!-- 2nd product -->
+                <div class="card bg-gray-100 p-8 shadow-xl">
+                    <figure class="px-10 pt-12">
+                        <img src="images/tea-2.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="text-2xl font-bold">Black Tea</h2>
+                        <p class="">Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                        </div>
+                    </div>
                 </div>
-              </div>
-             <!-- 1st product -->
-             <div class="card bg-gray-100 p-8 shadow-xl">
-                <figure class="px-10 pt-12">
-                  <img
-                    src="images/tea-1.png"
-                    alt="Shoes"
-                    class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                  <h2 class="text-2xl font-bold">Milk Tea</h2>
-                  <p class="">Creamer could be replaced by fresh milk</p>
-                  <div class="card-actions">
-                  </div>
+                <!-- 3rd product -->
+                <div class="card bg-gray-100 p-8 shadow-xl">
+                    <figure class="px-10 pt-12">
+                        <img src="images/tea-3.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="text-2xl font-bold"> Tea</h2>
+                        <p class="">Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                        </div>
+                    </div>
                 </div>
-              </div>
-             <!-- 1st product -->
-             <div class="card bg-gray-100 p-8 shadow-xl">
-                <figure class="px-10 pt-12">
-                  <img
-                    src="images/tea-1.png"
-                    alt="Shoes"
-                    class="rounded-xl" />
-                </figure>
-                <div class="card-body items-center text-center">
-                  <h2 class="text-2xl font-bold">Milk Tea</h2>
-                  <p class="">Creamer could be replaced by fresh milk</p>
-                  <div class="card-actions">
-                  </div>
+                <!-- 1st product -->
+                <div class="card bg-gray-100 p-8 shadow-xl">
+                    <figure class="px-10 pt-12">
+                        <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <p class="">Creamer could be replaced by fresh milk</p>
+                        <div class="card-actions">
+                        </div>
+                    </div>
                 </div>
-              </div>
-           </div>
+            </div>
 
-         </section>
+        </section>
+        <!-- great tea fresh tea section -->
+        <section class="my-24 flex gap-12 flex-col lg:flex-row">
+            <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+                <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
+                <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
+                    <img class="" src="images/fresh-1.png" alt="">
+                </div>
+                <div class="row-span-2 bg-[#576E39]  bg-opacity-10 rounded-lg px-8 py-12 flex justify-center items-center">
+                    <img class="" src="images/fresh-2.png" alt="">
+                </div>
+                <div class="rounded-lg h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFF0]"></div>
+
+            </div>
+            <div class="space-y-5 flex-1">
+                <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
+                <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <h4 class="font-extrabold">Unique Taste</h4>
+                <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                <h4 class="font-extrabold">Premium Quality</h4>
+                <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
 
     </main>
 
