created a simple review

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     colors: {
                         clifford: '#da373d',
                     },
-                    
+
                 }
             }
         }
@@ -101,19 +101,19 @@
                         <img src="images/tea-3.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                        <h2 class="text-2xl font-bold"> Tea</h2>
+                        <h2 class="text-2xl font-bold">Lemon Tea</h2>
                         <p class="">Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
                         </div>
                     </div>
                 </div>
-                <!-- 1st product -->
+                <!-- 4th product -->
                 <div class="card bg-gray-100 p-8 shadow-xl">
                     <figure class="px-10 pt-12">
-                        <img src="images/tea-1.png" alt="Shoes" class="rounded-xl" />
+                        <img src="images/tea-4.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
-                        <h2 class="text-2xl font-bold">Milk Tea</h2>
+                        <h2 class="text-2xl font-bold">Green Tea</h2>
                         <p class="">Creamer could be replaced by fresh milk</p>
                         <div class="card-actions">
                         </div>
@@ -129,7 +129,8 @@
                 <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
                     <img class="" src="images/fresh-1.png" alt="">
                 </div>
-                <div class="row-span-2 bg-[#576E39]  bg-opacity-10 rounded-lg px-8 py-12 flex justify-center items-center">
+                <div
+                    class="row-span-2 bg-[#576E39]  bg-opacity-10 rounded-lg px-8 py-12 flex justify-center items-center">
                     <img class="" src="images/fresh-2.png" alt="">
                 </div>
                 <div class="rounded-lg h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFF0]"></div>
@@ -137,11 +138,37 @@
             </div>
             <div class="space-y-5 flex-1">
                 <h3 class="text-5xl font-extrabold">Great Tea, Freshly <br> Presented</h3>
-                <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                <p class="">The meaning of gong cha is chanese is to provide the best tea to emperor from all
+                    possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha
+                    had been deeply appreciated by its custoers because of good words of mouth and unique customized
+                    service orginated from Taiwan.</p>
                 <h4 class="font-extrabold">Unique Taste</h4>
                 <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
                 <h4 class="font-extrabold">Premium Quality</h4>
                 <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+            </div>
+        </section>
+        <!-- super clients section -->
+        <section class="my-24 flex flex-col-1 lg:flex-row rounded-xl  bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 gap-12">
+            <div class="space-y-5">
+                <h2 class="text-5xl font-extrabold text-white">Meet Our Super
+                    <br>
+                    Clients
+                </h2>
+                <p class="text-white">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable.
+                </p>
+                <button class="btn text-gradient-to-r from-[#FF0000] to-[#FF8938] text-white">Show All</button>
+            </div>
+            <!-- review -->
+            <div class="relative p-10 rounded-lg bg-white">
+                <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
+                <p>We are providing the best and suitable home insurance services for the people who are interested to
+                    treatment</p>
+                <p class="font-bold mt-5">Ilham Yuda</p>
+                <p class="font-medium">Businessman</p>
             </div>
         </section>
 
