--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        customRed: '#FF0000',
+                        customOrange: '#FF8938',
                     },
 
                 }
@@ -65,12 +67,12 @@
     </header>
     <main class="container mx-auto">
         <!-- our featured products -->
-        <section class="text-center my-24">
+        <section class="text-center my-24 mx-4 lg:mx-12">
             <h2 class="text-5xl mb-5">Our Featured Products</h2>
             <p class="lg:max-w-3xl mb-10 mx-auto">There are many variations of passages of Lorem Ipsum available, but
                 the majority have suffered alteration in some form, by injected humour, or randomised words which don't
                 look even slightly believable.</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 m-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 m-6 space-y-5">
                 <!-- 1st product -->
                 <div class="card bg-gray-100 p-8 shadow-xl">
                     <figure class="px-10 pt-12">
@@ -107,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- 4th product -->
+
                 <div class="card bg-gray-100 p-8 shadow-xl">
                     <figure class="px-10 pt-12">
                         <img src="images/tea-4.png" alt="Shoes" class="rounded-xl" />
@@ -123,7 +125,7 @@
 
         </section>
         <!-- great tea fresh tea section -->
-        <section class="my-24 flex gap-12 flex-col lg:flex-row">
+        <section class="my-24 flex gap-12 mx-16 flex-col lg:flex-row">
             <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
                 <div class="rounded-lg h-36 bg-gradient-to-r from-red-100 to-amber-100"></div>
                 <div class="row-span-2 bg-[#E6A6231A] rounded-lg px-8 py-12 flex justify-center items-center">
@@ -149,26 +151,132 @@
             </div>
         </section>
         <!-- super clients section -->
-        <section class="my-24 flex flex-col-1 lg:flex-row rounded-xl  bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 gap-12">
-            <div class="space-y-5">
-                <h2 class="text-5xl font-extrabold text-white">Meet Our Super
-                    <br>
-                    Clients
-                </h2>
-                <p class="text-white">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even slightly
-                    believable.
-                </p>
-                <button class="btn text-gradient-to-r from-[#FF0000] to-[#FF8938] text-white">Show All</button>
+        <section
+            class="my-24 lg:mx-16 p-6 lg:px-20 flex flex-col lg:flex-row rounded-xl  bg-gradient-to-r from-[#FF8938] to-[#F00] py-24 gap-12">
+            <div class="flex lg:pr-28 items-center">
+                <div class="space-y-5">
+                    <h2 class="text-5xl font-extrabold text-white">Meet Our Super
+                        <br>
+                        clients
+                    </h2>
+                    <p class="text-white">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable.
+                    </p>
+                    <button class="btn btn-primary">Show All</button>
+                </div>
             </div>
-            <!-- review -->
-            <div class="relative p-10 rounded-lg bg-white">
-                <img class="absolute -top-5 -left-5" src="images/client.png" alt="">
-                <p>We are providing the best and suitable home insurance services for the people who are interested to
-                    treatment</p>
-                <p class="font-bold mt-5">Ilham Yuda</p>
-                <p class="font-medium">Businessman</p>
+            <!-- review container -->
+            <div class="relative">
+                <!-- next review -->
+                <div class="relative z-10 mb-16 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white
+                rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment</p>
+                    <p class="font-bold mt-5">Ilham Yuda</p>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- current review -->
+                <div class="absolute z-20 p-10 top-40 lg:right-16 lg:-left-24 lg:[w-430px] rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white
+                rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment</p>
+                    <p class="font-bold mt-5">Ilham Yuda</p>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+                <!-- previous review -->
+                <div class="relative z-10 opacity-40 p-10 rounded-lg bg-white">
+                    <img class="absolute -top-5 -left-5 border-4 border-white
+                rounded-full bg-white" src="images/client.png" alt="">
+                    <p>We are providing the best and suitable home insurance services for the people who are interested
+                        to
+                        treatment</p>
+                    <p class="font-bold mt-5">Ilham Yuda</p>
+                    <p class="font-medium">Businessman</p>
+                    <div class="flex justify-end">
+                        <img src="images/circles.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- News and Events -->
+        <section class="my-32 text-center">
+            <h3 class="text-5xl font-extrabold p-5">News & Events</h3>
+            <p class="max-w-3xl mx-auto">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words which don't look
+                even slightly believable. </p>
+
+            <!-- News section -->
+
+            <div class="mt-12 gap-12 mx-4 lg:mx-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- 1st news -->
+                <div class="card bg-base-100 w-96 shadow-xl text-left">
+                    <figure>
+                      <img
+                        src="images/news-1.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="">Feb 05, 2027</p>
+                      <h2 class="text-xl font-extrabold">
+                        Collecting 8 points for <br> discount
+                      </h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="">
+                        <button class="btn btn-primary">Learn More</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- 2nd news -->
+                <div class="card bg-base-100 w-96 shadow-xl text-left">
+                    <figure>
+                      <img
+                        src="images/news-2.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="">Feb 05, 2027</p>
+                      <h2 class="text-xl font-extrabold">
+                        Collecting 8 points for <br> discount
+                      </h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="">
+                        <button class="btn btn-primary">Learn More</button>
+                      </div>
+                    </div>
+                  </div>
+                <!-- 3rd news -->
+                <div class="card bg-base-100 w-96 shadow-xl text-left">
+                    <figure>
+                      <img
+                        src="images/news-3.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <p class="">Feb 05, 2027</p>
+                      <h2 class="text-xl font-extrabold">
+                        Collecting 8 points for <br> discount
+                      </h2>
+                      <p>There are many variations of passages of Lorem Ipsum available.</p>
+                      <div class="">
+                        <button class="btn btn-primary">Learn More</button>
+                      </div>
+                    </div>
+                  </div>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </section>
 
