added explore more icon

--- a/index.html
+++ b/index.html
@@ -46,14 +46,12 @@
             <div class="flex justify-between items-center flex-col lg:flex-row">
 
                 <div>
-                    <h1 class="text-7xl font-extrabold">It's good <br>
+                    <h1 class="text-4xl lg:text-7xl font-extrabold">It's good <br>
                         tea time at The <br> Tea House</h1>
                     <p class="py-6">
                         Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More <span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none"></svg>
-                        <path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg></span></button>
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
                 </div>
                 <div>
                     <img src="images/banner.png" class="rounded-lg" />
